# release-your-product-with-fastapi

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 13d80f4e6a05_bookingfile_model.py  4e40060bb6db_.py  8b8eb7df1606_add_account_status.py  b41f7909ce01_google_event_id.py  cf7d408d3bfe_add_attendance_status_field.py
appserver/: admin.py  app.py  db.py
appserver/apps/account/: admin.py  constants.py  deps.py  endpoints.py  enums.py  exceptions.py  models.py  schemas.py  utils.py
appserver/apps/calendar/: admin.py  deps.py  endpoints.py  enums.py  exceptions.py  models.py  schemas.py
appserver/libs/: query.py
appserver/libs/collections/: sort.py
appserver/libs/datetime/: calendar.py  datetime.py
appserver/libs/google/calendar/: deps.py  schemas.py  services.py
frontend/: README.md
frontend/src/components/calendar/: Body.tsx  Timeslots.tsx
frontend/src/hooks/: useAuth.ts  useBookings.ts  useCalendarNavigation.ts  useCreateBooking.ts  useLogin.ts  useTimeslots.ts
frontend/src/libs/: bookings.ts  httpClient.ts  utils.ts
frontend/src/pages/account/: Login.tsx
frontend/src/pages/calendar/: Booking.tsx  Calendar.tsx  MyBookings.tsx
frontend/src/pages/main/: Home.tsx
frontend/src/routes/: __root.tsx
frontend/src/types/: booking.d.ts
tests/: conftest.py  test_hello.py
tests/apps/account/: test_endpoints.py  test_login_api.py  test_logout_api.py  test_me_api.py  test_signup.py  test_signup_api.py  test_unregister_api.py  test_update_user_api.py
tests/apps/calendar/: test_booking_api.py  test_calendar.py  test_calendar_api.py  test_timeslot_api.py
tests/libs/datetime/: test_calendar.py
tests/libs/google/calendar/: test_create_event.py  test_manage_event.py
