[tool.poetry]
name = "fastapi-meeting-service"
version = "0.1.0"
description = ""
authors = ["Hannal <hannal@puddingcamp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.115.6"}
sqlmodel = "^0.0.22"
sqlalchemy-utc = "^0.14.0"
aiosqlite = "^0.20.0"
alembic = "^1.14.0"
greenlet = "^3.1.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pwdlib = {extras = ["argon2", "bcrypt"], version = "^0.2.1"}
fastapi-storages = {extras = ["all"], version = "^0.3.0"}
sqladmin = {extras = ["all"], version = "^0.20.1"}
google-api-python-client = "^2.156.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
pytest-lazy-fixtures = "^1.1.1"
pytest-env = "^1.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "8.3.4"
env = ["GOOGLE_CALENDAR_ID="]
addopts = " --strict-markers --tb=short --asyncio-mode=auto -p no:warnings --doctest-modules"
python_files = ["tests.py", "test_*.py"]
rootdir = "./"
testpaths = ["./tests", "./appserver"]
pythonpath = ["./appserver"]
filterwarnings = ["error", "ignore::DeprecationWarning:etcd3.*:"]
log_cli = true
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
